--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A portfolio for Lucas Newman. Designed, coded and created by Lucas to demonstrate his skills, projects and abilities.">
+  <meta name="description" content="A portfolio for Lucas Newman. Designed, Developed and Delpoyed, by Lucas to demonstrate his skills, projects and abilities.">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -34,7 +34,7 @@
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    const serviceWorkerVersion = "3558061205";
+    const serviceWorkerVersion = "1217665237";
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
