--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     </div>
                 </a>
                 <!-- Senior Project link -->
-                <a href="" target="_blank">
+                <a href="https://github.com/Squidly1408/Squidly1408.github.io/blob/main/assets/Big%20Picture%20Assets/Senior%20Project.md" target="_blank">
                     <div>
                         <h4 class="big_picture_heading">&lt;h4&gt;Senior Project&lt;/h4&gt;</h4>
                         <p class="big_picture_text">&lt;P&gt; A Project from My schooling at Cooks Hill Campus, a Big
@@ -133,7 +133,7 @@
             <!-- projects grid -->
             <div class="project_grid">
                 <!-- strocoge project -->
-                <div class="project" onclick="">
+                <div class="project" onclick="travel('https://github.com/Squidly1408/Strocoge')">
                     <!-- img -->
                     <img src="assets/images/projects/strocoge.png" alt="placeholder image" class="project_image">
                     <div class="Project_text">
