--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             <!-- projects grid -->
             <div class="project_grid">
                 <!-- strocoge project -->
-                <div class="project" onclick="travel('https://github.com/Squidly1408/Strocoge/blob/main/Readme.md')">
+                <div class="project" onclick="travel('https://github.com/Squidly1408/Strocoge')">
                     <!-- img -->
                     <img src="assets/images/projects/strocoge.png" alt="placeholder image" class="project_image">
                     <div class="Project_text">
@@ -144,7 +144,7 @@
                     </div>
                 </div>
                 <!-- Luvium Project -->
-                <div class="project" onclick="travel('https://github.com/Squidly1408/fic/blob/main/README.md')">
+                <div class="project" onclick="travel('https://github.com/Squidly1408/fic')">
                     <!-- img -->
                     <img src="assets/images/projects/luvium.png" alt="placeholder image" class="project_image">
                     <div class="Project_text">
@@ -155,7 +155,7 @@
                     </div>
                 </div>
                 <!-- aac app project -->
-                <div class="project" onclick="travel('https://github.com/Squidly1408/aaca/blob/main/README.md')">
+                <div class="project" onclick="travel('https://github.com/Squidly1408/aaca')">
                     <!-- img -->
                     <img src="assets/images/projects/aac_app.png" alt="placeholder image" class="project_image">
                     <div class="Project_text">
@@ -166,7 +166,7 @@
                     </div>
                 </div>
                 <!-- Portfolio project [i know] -->
-                <div class="project" onclick="travel('https://github.com/Squidly1408/Portfolio-Design-2/blob/main/README.md')">
+                <div class="project" onclick="travel('https://github.com/Squidly1408/Portfolio')">
                     <!-- img -->
                     <img src="assets/images/projects/portfolio.png" alt="placeholder image" class="project_image">
                     <div class="Project_text">
