added quotes to portfolio

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header class="header" id="header">
         <!-- social media links -->
         <div class="icons">
-            <div><a href="mailto:lucas.newman140@gmail.com"><img src="assets/images/icons/email.svg"
+            <div><a href="mailto:squidly1408@gmail.com "><img src="assets/images/icons/email.svg"
                         alt="email link Squidly1408" class="icon"></a> </div>
             <div><a href="https://github.com/Squidly1408"><img src="assets/images/icons/github.svg"
                         alt="github link Squidly1408" class="icon"></a> </div>
@@ -58,14 +58,17 @@
         </div>
         <!-- about me text -->
         <div>
-            <p class="paragraph">&lt;P&gt; I am a software Developer <a href="https://saphi.engineering/" target="_blank">@SAPHI_Engineering</a> who is going to change the world through my projects and My passions for learning, coding and electronics.. &lt;/P&gt;</p>
+            <p class="paragraph">&lt;P&gt; I am a software Developer <a href="https://saphi.engineering/"
+                    target="_blank">@SAPHI_Engineering</a> who is going to change the world through my projects and My
+                passions for learning, coding and electronics. &lt;/P&gt;</p>
         </div>
         <!-- skills and Big Picture Stuff -->
         <div class="SkillsandBigPicture">
             <!-- Big Picture Education stuff -->
             <div class="big_picture_section">
                 <!-- autobiography link -->
-                <a href="https://1drv.ms/w/c/f6929fc1ab5f8e55/EW1Yb_PoObhGl3pfW-w-h3sB6kpTjzxt7jwQJVg3eZrDWA?e=3Rwetp" target="_blank">
+                <a href="https://1drv.ms/w/c/f6929fc1ab5f8e55/EW1Yb_PoObhGl3pfW-w-h3sB6kpTjzxt7jwQJVg3eZrDWA?e=3Rwetp"
+                    target="_blank">
                     <div>
                         <h4 class="big_picture_heading">&lt;h4&gt;Autobiography&lt;/h4&gt;</h4>
                         <p class="big_picture_text">&lt;P&gt; Want to know more about me? My Past? Why I decide to do
@@ -73,7 +76,8 @@
                     </div>
                 </a>
                 <!-- Future Pathway Plan link -->
-                <a href="https://1drv.ms/w/c/f6929fc1ab5f8e55/Efy82lT_vpdLsMLiZCm2LmUBacRHEyxqbxq1iOvoefqwGQ?e=62qTwz" target="_blank">
+                <a href="https://1drv.ms/w/c/f6929fc1ab5f8e55/Efy82lT_vpdLsMLiZCm2LmUBacRHEyxqbxq1iOvoefqwGQ?e=62qTwz"
+                    target="_blank">
                     <div>
                         <h4 class="big_picture_heading">&lt;h4&gt;Future Pathway Plan&lt;/h4&gt;</h4>
                         <p class="big_picture_text">&lt;P&gt; Want to know where I want to be in 5 years? This will tell
@@ -81,7 +85,8 @@
                     </div>
                 </a>
                 <!-- Senior Project link -->
-                <a href="https://github.com/Squidly1408/Squidly1408.github.io/blob/main/assets/Big%20Picture%20Assets/Senior%20Project.md" target="_blank">
+                <a href="https://github.com/Squidly1408/Squidly1408.github.io/blob/main/assets/Big%20Picture%20Assets/Senior%20Project.md"
+                    target="_blank">
                     <div>
                         <h4 class="big_picture_heading">&lt;h4&gt;Senior Project&lt;/h4&gt;</h4>
                         <p class="big_picture_text">&lt;P&gt; A Project from My schooling at Cooks Hill Campus, a Big
@@ -113,6 +118,21 @@
                 <img src="assets/images/skills/12.png" alt="Arduino skill logo" class="grid_image">
             </div>
         </div>
+        <!-- Quotes Section -->
+        <div class="quotes">
+            <h4>Quotes:</h4>
+            <div class="quote_container">
+                <h6 id="prevBtn" class="quote_button" onclick="showPrev()">&lt;</h6>
+                <div>
+                    <h5 id="quote">"Lucas is a rare kind of student, motivated, innovative, and determined to make a positive
+                        impact on the world around him. It is a rare joy to find a student with such focus and drive, I look
+                        forward to seeing his education and career prosper."</h5>
+                    <p id="author">- Dr. Jacqueline D Bailey, Associate Lecturer - Computing & IT, The University of Newcastle
+                    </p>
+                </div>
+                <h6 id="nextBtn" class="quote_button" onclick="showNext()">&gt;</h6>
+            </div>
+        </div>
     </section>
     <!-- projects section including all projects -->
     <section class="projects" id="projects">
@@ -126,7 +146,9 @@
             </div>
             <!-- describing text -->
             <div>
-                <p class="paragraph">&lt;P&gt; From Electronics to Software, I have worked on and plan to continue to work on the following projects. Each project unique to me, however all share the commonality of communication &lt;/P&gt;</p>
+                <p class="paragraph">&lt;P&gt; From Electronics to Software, I have worked on and plan to continue to
+                    work on the following projects. Each project unique to me, however all share the commonality of
+                    communication &lt;/P&gt;</p>
             </div>
         </div>
         <div class="projects_content">
@@ -140,7 +162,9 @@
                         <!-- title -->
                         <h4>Strocoge</h4>
                         <!-- about -->
-                        <p>A project I worked on with Associate / Senior Lecturers and a Associate Professor at The univeristy Of Newcastle. Aimed to give a voice to those who need it via a glove embeded with electronics.</p>
+                        <p>A project I worked on with Associate / Senior Lecturers and a Associate Professor at The
+                            univeristy Of Newcastle. Aimed to give a voice to those who need it via a glove embeded with
+                            electronics.</p>
                     </div>
                 </div>
                 <!-- Luvium Project -->
@@ -151,7 +175,8 @@
                         <!-- title -->
                         <h4>Luvium</h4>
                         <!-- about -->
-                        <p>A social media website designed, developed and tested to increase collaboration at Cooks Hill Campus, however now being redesigned to suit the uses of The univeristy Of Newcastle.</p>
+                        <p>A social media website designed, developed and tested to increase collaboration at Cooks Hill
+                            Campus, however now being redesigned to suit the uses of The univeristy Of Newcastle.</p>
                     </div>
                 </div>
                 <!-- aac app project -->
@@ -162,7 +187,9 @@
                         <!-- title -->
                         <h4>AAC App</h4>
                         <!-- about -->
-                        <p>An app design for any device from windows to Iphone, aimed to allow communication for those in need, however improving on apps currently on the market through the use of customization to the user.</p>
+                        <p>An app design for any device from windows to Iphone, aimed to allow communication for those
+                            in need, however improving on apps currently on the market through the use of customization
+                            to the user.</p>
                     </div>
                 </div>
                 <!-- Portfolio project [i know] -->
@@ -173,7 +200,9 @@
                         <!-- title -->
                         <h4>My Portfolio</h4>
                         <!-- about -->
-                        <p>I designed, developed, and deployed my own portfolio, the one your currently looking at right now. It has been through various versions from an Instagram inspired Web App to what is now.</p>
+                        <p>I designed, developed, and deployed my own portfolio, the one your currently looking at right
+                            now. It has been through various versions from an Instagram inspired Web App to what is now.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -189,7 +218,9 @@
         </div>
         <!-- describing text -->
         <div>
-            <p class="paragraph">&lt;P&gt; The Places that gave me my knowledge about computers and coding, The places that guide me to my potential and The places gave me the oppotunities that have made me who I am today. &lt;/P&gt;</p>
+            <p class="paragraph">&lt;P&gt; The Places that gave me my knowledge about computers and coding, The places
+                that guide me to my potential and The places gave me the oppotunities that have made me who I am today.
+                &lt;/P&gt;</p>
         </div>
         <!-- experience grid -->
         <div class="place_grid">
@@ -279,7 +310,7 @@
                     alt="linkedin link Squidly1408" class="footer_icon"></a>
             <a href="https://github.com/Squidly1408"><img src="assets/images/icons/github.svg"
                     alt="github link Squidly1408" class="footer_icon"></a>
-            <a href="mailto:lucas.newman140@gmail.com"><img src="assets/images/icons/email.svg"
+            <a href="mailto:squidly1408@gmail.com "><img src="assets/images/icons/email.svg"
                     alt="email link Squidly1408" class="footer_icon"></a>
             <!-- logo -->
             <img src="assets/images/logo.svg" alt="Squidly1408 logo" class="logo">
