adding skills to projects and experience

--- a/index.html
+++ b/index.html
@@ -104,18 +104,21 @@
             </div>
             <!-- skills logos -->
             <div class="skillsGrid">
-                <img src="assets/images/skills/1.png" alt="flutter skill logo" class="grid_image">
-                <img src="assets/images/skills/2.png" alt="firebase skill logo" class="grid_image">
-                <img src="assets/images/skills/3.png" alt="dart skill logo" class="grid_image">
-                <img src="assets/images/skills/4.png" alt="html skill logo" class="grid_image">
-                <img src="assets/images/skills/5.png" alt="CSS skill logo" class="grid_image">
-                <img src="assets/images/skills/6.png" alt="JavaScript skill logo" class="grid_image">
-                <img src="assets/images/skills/7.png" alt="Github skill logo" class="grid_image">
-                <img src="assets/images/skills/8.png" alt="Visual Studio Code skill logo" class="grid_image">
-                <img src="assets/images/skills/9.png" alt="Git skill logo" class="grid_image">
-                <img src="assets/images/skills/10.png" alt="Raspberry Pi skill logo" class="grid_image">
-                <img src="assets/images/skills/11.png" alt="Python skill logo" class="grid_image">
-                <img src="assets/images/skills/12.png" alt="Arduino skill logo" class="grid_image">
+                <img src="assets/images/skills/flutter.png" alt="flutter skill logo" class="grid_image">
+                <img src="assets/images/skills/python.png" alt="firebase skill logo" class="grid_image">
+                <img src="assets/images/skills/dart.png" alt="dart skill logo" class="grid_image">
+                <img src="assets/images/skills/html.png" alt="html skill logo" class="grid_image">
+                <img src="assets/images/skills/css.png" alt="CSS skill logo" class="grid_image">
+                <img src="assets/images/skills/js.png" alt="JavaScript skill logo" class="grid_image">
+                <img src="assets/images/skills/github.png" alt="Github skill logo" class="grid_image">
+                <img src="assets/images/skills/vsc.png" alt="Visual Studio Code skill logo" class="grid_image">
+                <img src="assets/images/skills/git.png" alt="Git skill logo" class="grid_image">
+                <img src="assets/images/skills/rpi.png" alt="Raspberry Pi skill logo" class="grid_image">
+                <img src="assets/images/skills/adafruit.png" alt="Python skill logo" class="grid_image">
+                <img src="assets/images/skills/arduino.png" alt="Arduino skill logo" class="grid_image">
+                <img src="assets/images/skills/cad.png" alt="AI skill logo" class="grid_image">
+                <img src="assets/images/skills/ai.png" alt="PCB Design skill logo" class="grid_image">
+                <img src="assets/images/skills/pcb.png" alt="CAD / 3d printing skill logo" class="grid_image">
             </div>
         </div>
         <!-- Quotes Section -->
@@ -124,10 +127,13 @@
             <div class="quote_container">
                 <h6 id="prevBtn" class="quote_button" onclick="showPrev()">&lt;</h6>
                 <div>
-                    <h5 id="quote">"Lucas is a rare kind of student, motivated, innovative, and determined to make a positive
-                        impact on the world around him. It is a rare joy to find a student with such focus and drive, I look
+                    <h5 id="quote">"Lucas is a rare kind of student, motivated, innovative, and determined to make a
+                        positive
+                        impact on the world around him. It is a rare joy to find a student with such focus and drive, I
+                        look
                         forward to seeing his education and career prosper."</h5>
-                    <p id="author">- Dr. Jacqueline D Bailey, Associate Lecturer - Computing & IT, The University of Newcastle
+                    <p id="author">- Dr. Jacqueline D Bailey, Associate Lecturer - Computing & IT, The University of
+                        Newcastle
                     </p>
                 </div>
                 <h6 id="nextBtn" class="quote_button" onclick="showNext()">&gt;</h6>
@@ -165,6 +171,13 @@
                         <p>A project I worked on with Associate / Senior Lecturers and a Associate Professor at The
                             univeristy Of Newcastle. Aimed to give a voice to those who need it via a glove embeded with
                             electronics.</p>
+                        <div class="skills_list">
+                            <img src="assets/images/skills/python.png" alt="idk yet">
+                            <img src="assets/images/skills/arduino.png" alt="idk yet">
+                            <img src="assets/images/skills/rpi.png" alt="idk yet">
+                            <img src="assets/images/skills/adafruit_inverted.png" alt="idk yet">
+                            <img src="assets/images/skills/pcb_inverted.png" alt="idk yet">
+                        </div>
                     </div>
                 </div>
                 <!-- Luvium Project -->
@@ -177,6 +190,13 @@
                         <!-- about -->
                         <p>A social media website designed, developed and tested to increase collaboration at Cooks Hill
                             Campus, however now being redesigned to suit the uses of The univeristy Of Newcastle.</p>
+                        <div class="skills_list">
+                            <img src="assets/images/skills/flutter.png" alt="idk yet">
+                            <img src="assets/images/skills/dart.png" alt="idk yet">
+                            <img src="assets/images/skills/firebase.png" alt="idk yet">
+                            <img src="assets/images/skills/fb_auth.png" alt="idk yet">
+                            <img src="assets/images/skills/git.png" alt="idk yet">
+                        </div>
                     </div>
                 </div>
                 <!-- aac app project -->
@@ -190,6 +210,13 @@
                         <p>An app design for any device from windows to Iphone, aimed to allow communication for those
                             in need, however improving on apps currently on the market through the use of customization
                             to the user.</p>
+                        <div class="skills_list">
+                            <img src="assets/images/skills/flutter.png" alt="idk yet">
+                            <img src="assets/images/skills/dart.png" alt="idk yet">
+                            <img src="assets/images/skills/rpi.png" alt="idk yet">
+                            <img src="assets/images/skills/pcb_inverted.png" alt="idk yet">
+                            <img src="assets/images/skills/git.png" alt="idk yet">
+                        </div>
                     </div>
                 </div>
                 <!-- Portfolio project [i know] -->
@@ -203,6 +230,13 @@
                         <p>I designed, developed, and deployed my own portfolio, the one your currently looking at right
                             now. It has been through various versions from an Instagram inspired Web App to what is now.
                         </p>
+                        <div class="skills_list">
+                            <img src="assets/images/skills/flutter.png" alt="idk yet">
+                            <img src="assets/images/skills/html.png" alt="idk yet">
+                            <img src="assets/images/skills/css.png" alt="idk yet">
+                            <img src="assets/images/skills/js.png" alt="idk yet">
+                            <img src="assets/images/skills/git.png" alt="idk yet">
+                        </div>
                     </div>
                 </div>
             </div>
@@ -234,6 +268,15 @@
                     <!-- about -->
                     <p>I work at and completed an Internship at the number one tech agnostic solution provider in
                         Newcastle and one of the most influential ICT Companies in Australia.</p>
+                    <div class="skills_list">
+                        <img src="assets/images/skills/flutter.png" alt="idk yet">
+                        <img src="assets/images/skills/dart.png" alt="idk yet">
+                        <img src="assets/images/skills/pcb.png" alt="idk yet">
+                        <img src="assets/images/skills/firebase.png" alt="idk yet">
+                        <img src="assets/images/skills/cad.png" alt="idk yet">
+                        <img src="assets/images/skills/ai.png" alt="idk yet">
+                        <img src="assets/images/skills/git.png" alt="idk yet">
+                    </div>
                 </div>
             </div>
             <!-- uon -->
@@ -246,6 +289,11 @@
                     <!-- about -->
                     <p>I worked with Associate Lecturers, Associate Professors and senior Lecturers on my projects at
                         the state of the art univeristy based in Newcastle.</p>
+                    <div class="skills_list">
+                        <img src="assets/images/skills/python.png" alt="idk yet">
+                        <img src="assets/images/skills/adafruit.png" alt="idk yet">
+                        <img src="assets/images/skills/git.png" alt="idk yet">
+                    </div>
                 </div>
             </div>
             <!-- clickk -->
@@ -258,6 +306,11 @@
                     <!-- about -->
                     <p>My first internship at the website development company based in Newcastle and the Hunter Valley
                         known as Clickk where I learnt about my passion for software.</p>
+                    <div class="skills_list">
+                        <img src="assets/images/skills/html.png" alt="idk yet">
+                        <img src="assets/images/skills/css.png" alt="idk yet">
+                        <img src="assets/images/skills/js.png" alt="idk yet">
+                    </div>
                 </div>
             </div>
             <!-- NuBots -->
@@ -270,6 +323,10 @@
                     <!-- about -->
                     <p>I've completed a shadow day with the team of engineers and developers that build robots to
                         compete in an international competition, where they helped teach me about robotics.</p>
+                    <div class="skills_list">
+                        <img src="assets/images/skills/ai.png" alt="idk yet">
+                        <img src="assets/images/skills/linux.png" alt="idk yet">
+                    </div>
                 </div>
             </div>
             <!-- Redcrow Digital -->
@@ -282,6 +339,10 @@
                     <!-- about -->
                     <p>I completed a Shadow day at Redcrow Digital where I learnt development and design from a team of
                         software engineers and developers based in maitland.</p>
+                    <div class="skills_list">
+                        <img src="assets/images/skills/github.png" alt="idk yet">
+                        <img src="assets/images/skills/git.png" alt="idk yet">
+                    </div>
                 </div>
             </div>
             <!-- CHC Tech Support -->
@@ -295,6 +356,10 @@
                     <!-- about -->
                     <p>I was the student tech support officer at Cooks Hill Campus the Big Picture Education school
                         where I learnt about my passions for software and electronics.</p>
+                    <div class="skills_list">
+                        <img src="assets/images/skills/github.png" alt="idk yet">
+                        <img src="assets/images/skills/git.png" alt="idk yet">
+                    </div>
                 </div>
             </div>
         </div>
