adding and fixing quotes

--- a/index.html
+++ b/index.html
@@ -132,9 +132,15 @@
                         impact on the world around him. It is a rare joy to find a student with such focus and drive, I
                         look
                         forward to seeing his education and career prosper."</h5>
-                    <p id="author">- Dr. Jacqueline D Bailey, Associate Lecturer - Computing & IT, The University of
-                        Newcastle
-                    </p>
+                    <div class="quote_author_container">
+                        <img src="assets/images/quotes/uon.png" alt="Logo of the companies from i got quotes from"
+                            id="author_image">
+                        <p id="author">Dr. Jacqueline D Bailey, Associate Lecturer - Computing & IT, School of
+                            Inofrmation
+                            and Physical Sciences, The University of Newcastle
+                        </p>
+                    </div>
+
                 </div>
                 <h6 id="nextBtn" class="quote_button" onclick="showNext()">&gt;</h6>
             </div>
