--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="keywords" content="Squidly1408, Lucas Newman, Software Engineer">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
         content="This is the portfolio for Lucas Newman, a software engineer who is going to change the world.">
     <title>Squidly1408</title>
+    <link rel="shortcut icon" href="assets/images/logo.svg" type="image/x-icon">
     <link rel="apple-touch-icon" href="assets/images/logo.svg">
     <link rel="shortcut icon" href="assets/images/logo.svg" type="image/x-icon">
     <link href="styles.css" rel="stylesheet" type="text/css">
