adding and rearranging skills

--- a/index.html
+++ b/index.html
@@ -125,16 +125,43 @@
                             <div class="grid_text">Flutter</div>
                         </a>
                     </div>
-                    <div class="skill">
-                        <a href="https://www.python.org/" target="_blank">
-                            <img src="assets/images/skills/python.png" alt="Firebase skill logo" class="grid_image">
-                            <div class="grid_text">Python</div>
-                        </a>
-                    </div>
+
                     <div class="skill">
                         <a href="https://dart.dev/" target="_blank">
                             <img src="assets/images/skills/dart.png" alt="Dart skill logo" class="grid_image">
                             <div class="grid_text">Dart</div>
+                        </a>
+                    </div>
+                    <div class="skill">
+                        <a href="https://www.python.org/" target="_blank">
+                            <img src="assets/images/skills/python.png" alt="Python skill logo" class="grid_image">
+                            <div class="grid_text">Python</div>
+                        </a>
+                    </div>
+                    <div class="skill">
+                        <a href="https://micropython.org/" target="_blank">
+                            <img src="assets/images/skills/micropython.png" alt="MicroPython skill logo"
+                                class="grid_image">
+                            <div class="grid_text">MicroPython</div>
+                        </a>
+                    </div>
+                    <div class="skill">
+                        <a href="https://www.tensorflow.org/" target="_blank">
+                            <img src="assets/images/skills/tensorflow.png" alt="Tensorflow AI skill logo"
+                                class="grid_image">
+                            <div class="grid_text">Tensorflow AI</div>
+                        </a>
+                    </div>
+                    <div class="skill">
+                        <a href="https://pytorch.org/" target="_blank">
+                            <img src="assets/images/skills/pytorch.png" alt="PyTorch AI skill logo" class="grid_image">
+                            <div class="grid_text">PyTorch AI</div>
+                        </a>
+                    </div>
+                    <div class="skill">
+                        <a href="https://pandas.pydata.org/" target="_blank">
+                            <img src="assets/images/skills/pandas.png" alt="Pandas AI skill logo" class="grid_image">
+                            <div class="grid_text">Pandas AI</div>
                         </a>
                     </div>
                     <div class="skill">
@@ -162,18 +189,12 @@
                         </a>
                     </div>
                     <div class="skill">
-                        <a href="https://code.visualstudio.com/" target="_blank">
-                            <img src="assets/images/skills/vsc.png" alt="Visual Studio Code skill logo"
-                                class="grid_image">
-                            <div class="grid_text">Visual Studio Code</div>
-                        </a>
-                    </div>
-                    <div class="skill">
                         <a href="https://git-scm.com/" target="_blank">
                             <img src="assets/images/skills/git.png" alt="Git skill logo" class="grid_image">
                             <div class="grid_text">Git</div>
                         </a>
                     </div>
+
                     <div class="skill">
                         <a href="https://www.raspberrypi.org/" target="_blank">
                             <img src="assets/images/skills/rpi.png" alt="Raspberry Pi skill logo" class="grid_image">
@@ -193,15 +214,28 @@
                         </a>
                     </div>
                     <div class="skill">
-                        <a href="https://www.autodesk.com/products/fusion-360/overview" target="_blank">
-                            <img src="assets/images/skills/cad.png" alt="CAD/3D Printing skill logo" class="grid_image">
-                            <div class="grid_text">CAD / 3D Printing</div>
+                        <a href="https://www.linux.org/#google_vignette" target="_blank">
+                            <img src="assets/images/skills/linux.png" alt="Linux skill logo" class="grid_image">
+                            <div class="grid_text">Linux</div>
                         </a>
                     </div>
                     <div class="skill">
-                        <a href="https://www.openai.com/" target="_blank">
-                            <img src="assets/images/skills/ai.png" alt="AI skill logo" class="grid_image">
-                            <div class="grid_text">AI</div>
+                        <a href="https://code.visualstudio.com/" target="_blank">
+                            <img src="assets/images/skills/vsc.png" alt="Visual Studio Code skill logo"
+                                class="grid_image">
+                            <div class="grid_text">Visual Studio Code</div>
+                        </a>
+                    </div>
+                    <div class="skill">
+                        <a href="https://visualstudio.microsoft.com/" target="_blank">
+                            <img src="assets/images/skills/vs.png" alt="Visual Studio skill logo" class="grid_image">
+                            <div class="grid_text">Visual Studio</div>
+                        </a>
+                    </div>
+                    <div class="skill">
+                        <a href="https://www.autodesk.com/products/fusion-360/overview" target="_blank">
+                            <img src="assets/images/skills/cad.png" alt="CAD/3D Printing skill logo" class="grid_image">
+                            <div class="grid_text">CAD / 3D Printing</div>
                         </a>
                     </div>
                     <div class="skill">
