--- a/index.html
+++ b/index.html
@@ -234,14 +234,15 @@
                     </div>
                     <div class="skill">
                         <a href="https://www.autodesk.com/products/fusion-360/overview" target="_blank">
-                            <img src="assets/images/skills/cad.png" alt="CAD/3D Printing skill logo" class="grid_image">
-                            <div class="grid_text">CAD / 3D Printing</div>
+                            <img src="assets/images/skills/fusion360.png" alt="CAD/3D Printing skill logo"
+                                class="grid_image">
+                            <div class="grid_text">Fusion360</div>
                         </a>
                     </div>
                     <div class="skill">
                         <a href="https://www.autodesk.com/solutions/pcb-design-software" target="_blank">
-                            <img src="assets/images/skills/pcb.png" alt="PCB Design skill logo" class="grid_image">
-                            <div class="grid_text">PCB Design</div>
+                            <img src="assets/images/skills/eagle.png" alt="PCB Design skill logo" class="grid_image">
+                            <div class="grid_text">AutoDesk Eagle</div>
                         </a>
                     </div>
                 </div>
@@ -310,7 +311,7 @@
                             <img src="assets/images/skills/arduino.png" alt="Arduino">
                             <img src="assets/images/skills/rpi.png" alt="Raspberry Pi">
                             <img src="assets/images/skills/adafruit_inverted.png" alt="Adafruit">
-                            <img src="assets/images/skills/pcb_inverted.png" alt="PCB Design">
+                            <img src="assets/images/skills/eagle.png" alt="PCB Design">
                         </div>
                     </div>
                 </div>
@@ -348,7 +349,7 @@
                             <img src="assets/images/skills/flutter.png" alt=Flutter">
                             <img src="assets/images/skills/dart.png" alt="Dart">
                             <img src="assets/images/skills/rpi.png" alt="Raspberry PI">
-                            <img src="assets/images/skills/pcb_inverted.png" alt="PCB design">
+                            <img src="assets/images/skills/eagle.png" alt="PCB design">
                             <img src="assets/images/skills/git.png" alt="GIT">
                         </div>
                     </div>
@@ -405,9 +406,9 @@
                     <div class="skills_list">
                         <img src="assets/images/skills/flutter.png" alt="idk yet">
                         <img src="assets/images/skills/dart.png" alt="idk yet">
-                        <img src="assets/images/skills/pcb.png" alt="idk yet">
+                        <img src="assets/images/skills/eagle.png" alt="idk yet">
                         <img src="assets/images/skills/firebase.png" alt="idk yet">
-                        <img src="assets/images/skills/cad.png" alt="idk yet">
+                        <img src="assets/images/skills/fusion360.png" alt="idk yet">
                         <img src="assets/images/skills/ai.png" alt="idk yet">
                         <img src="assets/images/skills/git.png" alt="idk yet">
                     </div>
