addign valentines day and fixing bugs

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <h4 onclick="Scroll('projects');" class="navlink">Projects</h4>
             <h4 onclick="Scroll('experience');" class="navlink">Experience</h4>
 
-            <img src="assets/images/logo.svg" alt="Squidly1408 logo" class="logo">
+            <img src="assets/images/logo.svg" alt="Squidly1408 logo" class="logo" id="logo">
 
         </div>
         <!-- introduction text -->
