Valentines Day update

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <h1>Lucas Newman</h1>
             </div>
             <div>
-                <p>I Design, Develop, Deploy Electronics and Software</p>
+                <p id='bannerSubText'>I Design, Develop, Deploy Electronics and Software</p>
             </div>
         </div>
     </header>
@@ -276,9 +276,9 @@
         </div>
     </section>
     <!-- projects section including all projects -->
-    <section class="projects" id="projects">
+    <section class="projects">
         <!-- projects title / transition image -->
-        <div class="projects_title">
+        <div class="projects_title" id="projects">
             <!-- heading -->
             <div class="heading">
                 <h3 class="headingTag">&lt;h1&gt;</h3>
@@ -292,7 +292,7 @@
                     communication &lt;/H2&gt;</p>
             </div>
         </div>
-        <div class="projects_content">
+        <div class="projects_content" id="experience">
             <!-- projects grid -->
             <div class="project_grid">
                 <!-- strocoge project -->
@@ -378,7 +378,7 @@
         </div>
     </section>
     <!-- experience -->
-    <section class="experience" id="experience">
+    <section class="experience">
         <!-- heading -->
         <div class="heading">
             <h3 class="headingTag">&lt;h1&gt;</h3>
@@ -480,7 +480,7 @@
             <a href="mailto:squidly1408@gmail.com "><img src="assets/images/icons/email.svg"
                     alt="email link Squidly1408" class="footer_icon"></a>
             <!-- logo -->
-            <img src="assets/images/logo.svg" alt="Squidly1408 logo" class="logo">
+            <img src="assets/images/logo.svg" alt="Squidly1408 logo" class="logo" id="logo_footer">
         </div>
     </section>
 </body>
