events + aboringal and TSI acknowledgements

--- a/index.html
+++ b/index.html
@@ -468,6 +468,12 @@
     </section>
     <!-- footer -->
     <section class="footer">
+        <div class="acknowledgemets">
+            <img src="./assets/images/acknowledgement/aboriginal.png" alt="Aborignal Flag icon">
+            <img src="./assets/images/acknowledgement/TSI.jpg" alt="Torres Strait Islander Flag icon">
+            <p>i acknowlege the traditional people of Australia, the Aboriginal and Torres Strait Islander peoples.</p>
+        </div>
+
         <!-- social media links -->
         <div class="footer_icons">
             <!-- links -->
